# a-piece-of-flake

./: .gitignore  README.md  a-piece-of-flake.cabal  a-piece-of-flake.cabal.template  changelog.md  flake.nix  trace-embrace.yaml
.github/workflows/: test.yml
app/: PieceOfFlake.hs
assets/: app.js  app.js.br  bulma.min.css  bulma.min.css.br  favicon.svg.br  flake.svg.br  github.svg.br  robots.txt  sitemap.xml  style.css  style.css.br
nixos/: flake.nix  non-flake.nix
scripts/: compress.sh  extract-css-classes.sh
src/PieceOfFlake/: Acid.hs  Aeson.hs  App.hs  CmdArgs.hs  CmdRun.hs  Fetcher.hs  Flake.hs  Http.hs  Index.hs  Nix.hs  Page.hs  Prelude.hs  Req.hs  Stats.hs  Stm.hs  SubmitList.hs  Th.hs  TotalMath.hs  UrlEncoder.hs  UtcTime.hs  WebService.hs  Yesod.hs
src/PieceOfFlake/Flake/: Repo.hs
test/PieceOfFlake/Test/: Aeson.hs
